    will be ignored.

    Users who currently use 'norfc1918' are encouraged to consider
    using NULL_ROUTE_RFC1918=Yes instead.

 8) The install.sh scripts in the Shorewall and Shorewall6 packages no
    longer create a backup copy of the existing configuration. If you
    want your configuration backed up prior to upgradeing, you will
    need to do that yourself. 

----------------------------------------------------------------------------
          P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 0  Beta 2
----------------------------------------------------------------------------

1)  The find_first_interface_address() and
    find_first_interface_addresss_if_any() functions were not in scope when
    /etc/shorewall/params was processed.

2)  The compiled script could fail with an error such as the following
    when the internal traffic shaper was enabled:

    ERROR: Command "tc qdisc add dev dsl0 root handle 1: htb
    	   default 0 r2q 5.5" Failed

----------------------------------------------------------------------------
             K N O W N   P R O B L E M S   R E M A I N I N G
----------------------------------------------------------------------------

None.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 4 . 0 Beta 2
----------------------------------------------------------------------------

1)  A 'upnpclient' option has been added to
    /etc/shorewall/interfaces. This option is intended for laptop users
    who always run Shorewall on their system yet need to run
    UPnP-enabled client apps such as Transmission (BitTorrent client).

    The option causes Shorewall to detect the default gateway through
    the interface and to accept UDP packets from that gateway. Note
    that, like all aspects of UPnP, this is a security hole so use this
    option at your own risk.

----------------------------------------------------------------------------