@@ -106,6 +106,9 @@ Shorewall 4.4.0 Beta 2
     want your configuration backed up prior to upgradeing, you will
     need to do that yourself. 
 
+    As part of this change, the fallback.sh scripts are no longer
+    released.
+
 ----------------------------------------------------------------------------
           P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 0  Beta 2
 ----------------------------------------------------------------------------
@@ -119,6 +122,9 @@ Shorewall 4.4.0 Beta 2
 
     ERROR: Command "tc qdisc add dev dsl0 root handle 1: htb
     	   default 0 r2q 5.5" Failed
+
+3)  The help output from the install.sh scripts mentioned the '-n'
+    option but support for that option has been removed.
 
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
